Pull up following revision(s) (requested by skrll in ticket #1225): 	sys/arch/arm/arm/disassem.c: revision 1.26 The mode synonyms are different for stm and ldm - handle this. PR/49520: arm/disassem.c doesn't use proper address mode name for loads